--- a/src/client/index.html
+++ b/src/client/index.html
@@ -125,6 +125,7 @@
 		background-position: center;
 		background-repeat: no-repeat;
 		animation: flap 2s infinite alternate;
+		filter: hue-rotate(var(--hue-rotate, 0deg));
 	}
 
 	.instructions {
