--- a/src/client/screen.html
+++ b/src/client/screen.html
@@ -134,6 +134,7 @@
 		background-position: center;
 		background-repeat: no-repeat;
 		animation: flap 2s infinite alternate;
+		filter: hue-rotate(var(--hue-rotate, 0deg));
 		transition: opacity 2s 1s;
 		opacity: 0;
 	}
