--- a/src/client/screen.html
+++ b/src/client/screen.html
@@ -70,11 +70,13 @@
 
 	.timer {
 		position: absolute;
-		top: 598px;
-		font-size: 70px;
+		top: 883px;
+		font-size: 100px;
 		font-weight: 700;
-		left: 652px;
-		right: 641px;
+		left: 433px;
+		right: 446px;
+		display: flex;
+		justify-content: center;
 		text-align: center;
 		font-variant-numeric: tabular-nums;
 		opacity: 0;
@@ -202,11 +204,11 @@
 
 	.entrance {
 		position: absolute;
-		top: 382px;
-		left: 1036px;
-		right: 152px;
+		top: 1357px;
+		left: 382px;
+		right: 392px;
 		text-align: center;
-		font-size: 30px;
+		font-size: 38px;
 		line-height: 1.3;
 		opacity: 0;
 		transition: opacity 0.3s;
@@ -217,9 +219,8 @@
 	}
 
 	.entrance div {
-		font-size: 16px;
+		font-size: 26px;
 		opacity: 0.6;
-		padding-left: 5.6ex;
 	}
 
 	.entrance span {
@@ -231,18 +232,22 @@
 		opacity: 0.7;
 	}
 
+	.entrance span:last-of-type {
+		padding-right: 1.6em;
+	}
+
 	.camera {
 		position: absolute;
-		top: 619px;
-		left: 535px;
-		right: 527px;
-		font-size: 18px;
+		top: 909px;
+		left: 472px;
+		right: 490px;
+		font-size: 29px;
 		text-align: center;
 		opacity: 0;
 		transition: opacity 2s;
 	}
 
-	.is-flashWarning .camera {
+	.is-flashWarning .timer.is-active~.camera {
 		opacity: 1;
 	}
 
@@ -276,11 +281,9 @@
 		top: -2px;
 	}
 
+	/* Hide not used components */
 	.title,
-	.entrance,
-	.involved,
-	.timer,
-	.camera {
+	.involved {
 		display: none;
 	}
 </style>
