--- a/src/client/screen.html
+++ b/src/client/screen.html
@@ -251,11 +251,11 @@
 
 	.entrance {
 		position: absolute;
-		top: 1357px;
+		top: 1317px;
 		left: 382px;
 		right: 392px;
 		text-align: center;
-		font-size: 38px;
+		font-size: 61px;
 		line-height: 1.3;
 		opacity: 0;
 		transition: opacity 0.3s;
@@ -268,19 +268,11 @@
 	.entrance div {
 		font-size: 26px;
 		opacity: 0.6;
+		padding-top: 0.3em;
 	}
 
 	.entrance span {
 		text-transform: uppercase;
-	}
-
-	.entrance span:first-of-type,
-	.entrance span:last-of-type {
-		opacity: 0.7;
-	}
-
-	.entrance span:last-of-type {
-		padding-right: 1.6em;
 	}
 
 	.camera {
@@ -358,7 +350,7 @@
 		</div>
 		<div class="entrance">
 			<div>zapojte se teď na</div>
-			<span>www.</span><span>zasvit</span><span>.cz</span>
+			<span>zasvit</span><span>.cz</span>
 		</div>
 		<div class="camera">
 			Foťte bez blesku!
