--- a/src/client/screen.html
+++ b/src/client/screen.html
@@ -137,7 +137,7 @@
 		background-size: contain;
 		background-position: center;
 		background-repeat: no-repeat;
-		animation: flap 2s infinite alternate;
+		/*animation: flap 2s infinite alternate;*/
 		filter: hue-rotate(var(--hue-rotate, 0deg));
 		transition: opacity 2s 1s;
 		opacity: 0;
