Screen: foto typo

--- a/src/client/screen.html
+++ b/src/client/screen.html
@@ -354,9 +354,9 @@
 			<span>zasvit</span><span>.cz</span>
 		</div>
 		<div class="camera">
-			Foťte bez blesku!
+			Foto bez blesku
 			<br />
-			No flash!
+			No flash
 		</div>
 	</div>
 	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-52555251-9"></script>
