Change title to more generic one

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="utf-8" />
-	<title>Rozsviť Vyšehrad</title>
+	<title>Zasviť</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1" />
 	<meta name="theme-color" content="#000000" />
 	<link rel="icon" type="image/png" href="icon/36.png" />
