--- a/src/client/screen.html
+++ b/src/client/screen.html
@@ -1,373 +1,380 @@
 <!DOCTYPE html>
 <html>
-
-<head>
-	<meta charset="utf-8" />
-	<title>Screen</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1" />
-	<script defer src="screen.js"></script>
-</head>
-<style>
-	body {
-		margin: 0;
-		color: #ffffff;
-		background-color: #000000;
-		--involved-duration: 150s;
-		--reflector-size: 60px;
-		--width: 1200px;
-		--height: 1920px;
-	}
-
-	* {
-		font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;
-	}
-
-	*,
-	*::before,
-	*::after {
-		box-sizing: border-box;
-	}
-
-	.playground {
-		position: relative;
-		width: var(--width);
-		height: var(--height);
-		overflow: hidden;
-	}
-
-	.playground::before {
-		content: '';
-		position: absolute;
-		top: 0;
-		left: 0;
-		right: 0;
-		bottom: 0;
-		background-image: url('./background.jpg');
-		opacity: 0;
-		visibility: hidden;
-		transition-property: opacity, visibility;
-		transition-duration: 0.5s;
-	}
-
-	.is-buildingVisible .playground::before {
-		opacity: 0.2;
-		visibility: visible;
-	}
-
-	.is-buildingOnly .playground::before {
-		opacity: 1;
-		visibility: visible;
-		z-index: 100;
-	}
-
-	.playground::after {
-		content: '';
-		position: absolute;
-		top: 0;
-		left: 0;
-		right: 0;
-		bottom: 0;
-		background-image: url('./mask.png');
-	}
-
-	.timer {
-		position: absolute;
-		top: 883px;
-		font-size: 100px;
-		font-weight: 700;
-		left: 433px;
-		right: 446px;
-		display: flex;
-		justify-content: center;
-		text-align: center;
-		font-variant-numeric: tabular-nums;
-		opacity: 0;
-		transition: opacity 0.3s 1s, color 2s 0s;
-	}
-
-	.timer.is-active {
-		opacity: 1;
-		transition-delay: 0s;
-	}
-
-	.is-flashWarning .timer {
-		color: transparent;
-	}
-
-	.reflectors {
-		width: 100%;
-		height: 100%;
-		position: absolute;
-		top: 0;
-		left: 0;
-		right: 0;
-		bottom: 0;
-		color: #ffdb76;
-	}
-
-	.reflectors div {
-		position: absolute;
-		top: 0;
-		left: 0;
-		filter: drop-shadow(0 0 6px #000000);
-	}
-
-	.reflectors div div {
-		transition: transform 0.4s;
-	}
-
-	.reflectors div.is-flashing div {
-		transform: scale(1.2);
-		transition-duration: 0.2s;
-	}
-
-	@keyframes flap {
-		to {
-			transform: scaleX(0.8);
+	<head>
+		<meta charset="utf-8" />
+		<title>Screen</title>
+		<meta
+			name="viewport"
+			content="width=device-width, initial-scale=1, minimum-scale=1"
+		/>
+		<script defer src="screen.js"></script>
+	</head>
+	<style>
+		body {
+			margin: 0;
+			color: #ffffff;
+			background-color: #000000;
+			--involved-duration: 150s;
+			--reflector-size: 60px;
+			--width: 2681px;
+			--height: 1440px;
 		}
-	}
 
-	.reflectors div div::before {
-		content: '';
-		position: absolute;
-		top: calc(-1 * var(--reflector-size) / 2);
-		left: calc(-1 * var(--reflector-size) / 2);
-		width: var(--reflector-size);
-		height: var(--reflector-size);
-		background-image: url('./butterfly.png');
-		background-size: contain;
-		background-position: center;
-		background-repeat: no-repeat;
-		/*animation: flap 2s infinite alternate;*/
-		filter: hue-rotate(var(--hue-rotate, 0deg));
-		transition: opacity 2s 1s;
-		opacity: 0;
-	}
+		* {
+			font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;
+		}
 
-	.reflectors div.is-active div::before,
-	.reflectors div.is-active div::after {
-		opacity: 1;
-		transition-duration: 1s;
-		transition-delay: 0s;
-	}
+		*,
+		*::before,
+		*::after {
+			box-sizing: border-box;
+		}
 
-	.flowers {
-		position: absolute;
-		top: 0;
-		left: 0;
-		width: 100%;
-		height: 100%;
-	}
+		.playground {
+			position: relative;
+			width: var(--width);
+			height: var(--height);
+			overflow: hidden;
+		}
 
-	@keyframes flower-fadeOut {
-		to {
+		.playground::before {
+			content: '';
+			position: absolute;
+			top: 0;
+			left: 0;
+			right: 0;
+			bottom: 0;
+			background-image: url('./background.jpg');
+			opacity: 0;
+			visibility: hidden;
+			transition-property: opacity, visibility;
+			transition-duration: 0.5s;
+		}
+
+		.is-buildingVisible .playground::before {
+			opacity: 0.2;
+			visibility: visible;
+		}
+
+		.is-buildingOnly .playground::before {
+			opacity: 1;
+			visibility: visible;
+			z-index: 100;
+		}
+
+		.playground::after {
+			content: '';
+			position: absolute;
+			top: 0;
+			left: 0;
+			right: 0;
+			bottom: 0;
+			background-image: url('./mask.png');
+		}
+
+		.timer {
+			position: absolute;
+			top: 883px;
+			font-size: 100px;
+			font-weight: 700;
+			left: 433px;
+			right: 446px;
+			display: flex;
+			justify-content: center;
+			text-align: center;
+			font-variant-numeric: tabular-nums;
+			opacity: 0;
+			transition: opacity 0.3s 1s, color 2s 0s;
+		}
+
+		.timer.is-active {
+			opacity: 1;
+			transition-delay: 0s;
+		}
+
+		.is-flashWarning .timer {
+			color: transparent;
+		}
+
+		.reflectors {
+			width: 100%;
+			height: 100%;
+			position: absolute;
+			top: 0;
+			left: 0;
+			right: 0;
+			bottom: 0;
+			color: #ffdb76;
+		}
+
+		.reflectors div {
+			position: absolute;
+			top: 0;
+			left: 0;
+			filter: drop-shadow(0 0 6px #000000);
+		}
+
+		.reflectors div div {
+			transition: transform 0.4s;
+		}
+
+		.reflectors div.is-flashing div {
+			transform: scale(1.2);
+			transition-duration: 0.2s;
+		}
+
+		@keyframes flap {
+			to {
+				transform: scaleX(0.8);
+			}
+		}
+
+		.reflectors div div::before {
+			content: '';
+			position: absolute;
+			top: calc(-1 * var(--reflector-size) / 2);
+			left: calc(-1 * var(--reflector-size) / 2);
+			width: var(--reflector-size);
+			height: var(--reflector-size);
+			background-image: url('./butterfly.png');
+			background-size: contain;
+			background-position: center;
+			background-repeat: no-repeat;
+			/*animation: flap 2s infinite alternate;*/
+			filter: hue-rotate(var(--hue-rotate, 0deg));
+			transition: opacity 2s 1s;
 			opacity: 0;
 		}
-	}
 
-	.flowers div {
-		--size: 40px;
-		--fadeOut-duration: 0.8s;
-		position: absolute;
-		top: calc(var(--y) * var(--height) - var(--size) / 2);
-		left: calc(var(--x) * var(--width) - var(--size) / 2);
-		width: var(--size);
-		height: var(--size);
-		animation: flower-fadeOut var(--fadeOut-duration) calc(1s * var(--life-duration) - var(--fadeOut-duration)) forwards;
-	}
-
-	@keyframes flower-bloom {
-		from {
-			transform: scale(0);
+		.reflectors div.is-active div::before,
+		.reflectors div.is-active div::after {
+			opacity: 1;
+			transition-duration: 1s;
+			transition-delay: 0s;
 		}
-	}
 
-	.flowers div::before {
-		content: '';
-		position: absolute;
-		top: 0;
-		left: 0;
-		width: 100%;
-		height: 100%;
-		background-image: url('./flower.png');
-		background-size: contain;
-		background-repeat: no-repeat;
-		background-position: center;
-		animation: flower-bloom 1s;
-	}
+		.flowers {
+			position: absolute;
+			top: 0;
+			left: 0;
+			width: 100%;
+			height: 100%;
+		}
 
-	.title {
-		position: absolute;
-		top: 403px;
-		left: 479px;
-		right: 467px;
-		font-size: 28px;
-		text-transform: uppercase;
-		text-align: center;
-	}
+		@keyframes flower-fadeOut {
+			to {
+				opacity: 0;
+			}
+		}
 
-	.involved {
-		position: absolute;
-		top: 630px;
-		left: 44px;
-		right: 50px;
-		white-space: nowrap;
-		font-size: 23px;
-		clip-path: polygon(-80% -80%,
+		.flowers div {
+			--size: 40px;
+			--fadeOut-duration: 0.8s;
+			position: absolute;
+			top: calc(var(--y) * var(--height) - var(--size) / 2);
+			left: calc(var(--x) * var(--width) - var(--size) / 2);
+			width: var(--size);
+			height: var(--size);
+			animation: flower-fadeOut var(--fadeOut-duration)
+				calc(1s * var(--life-duration) - var(--fadeOut-duration)) forwards;
+		}
+
+		@keyframes flower-bloom {
+			from {
+				transform: scale(0);
+			}
+		}
+
+		.flowers div::before {
+			content: '';
+			position: absolute;
+			top: 0;
+			left: 0;
+			width: 100%;
+			height: 100%;
+			background-image: url('./flower.png');
+			background-size: contain;
+			background-repeat: no-repeat;
+			background-position: center;
+			animation: flower-bloom 1s;
+		}
+
+		.title {
+			position: absolute;
+			top: 403px;
+			left: 479px;
+			right: 467px;
+			font-size: 28px;
+			text-transform: uppercase;
+			text-align: center;
+		}
+
+		.involved {
+			position: absolute;
+			top: 630px;
+			left: 44px;
+			right: 50px;
+			white-space: nowrap;
+			font-size: 23px;
+			clip-path: polygon(
+				-80% -80%,
 				41.9% -80%,
 				41.9% 180%,
 				59.6% 180%,
 				59.6% -80%,
 				180% -80%,
 				180% 180%,
-				-180% 180%);
-	}
-
-	@keyframes involved-in-scroll {
-		100% {
-			transform: translateX(-100%);
+				-180% 180%
+			);
 		}
-	}
 
-	@keyframes involved-in-scroll-2 {
-		100% {
-			transform: translateX(-100%);
+		@keyframes involved-in-scroll {
+			100% {
+				transform: translateX(-100%);
+			}
 		}
-	}
 
-	.involved-in {
-		width: fit-content;
-		padding-left: 150%;
-		animation: involved-in-scroll linear infinite var(--involved-duration);
-		/*animation: involved-in-scroll linear infinite 500s -300s;*/
-	}
+		@keyframes involved-in-scroll-2 {
+			100% {
+				transform: translateX(-100%);
+			}
+		}
 
-	.is-involvedRestart .involved-in {
-		animation-name: involved-in-scroll-2;
-	}
+		.involved-in {
+			width: fit-content;
+			padding-left: 150%;
+			animation: involved-in-scroll linear infinite var(--involved-duration);
+			/*animation: involved-in-scroll linear infinite 500s -300s;*/
+		}
 
-	.involved-content {
-		position: relative;
-	}
+		.is-involvedRestart .involved-in {
+			animation-name: involved-in-scroll-2;
+		}
 
-	.entrance {
-		position: absolute;
-		top: 1317px;
-		left: 382px;
-		right: 392px;
-		text-align: center;
-		font-size: 61px;
-		line-height: 1.3;
-		opacity: 0;
-		transition: opacity 0.3s;
-	}
+		.involved-content {
+			position: relative;
+		}
 
-	.is-entranceVisible .entrance {
-		opacity: 1;
-	}
+		.entrance {
+			position: absolute;
+			top: 1317px;
+			left: 382px;
+			right: 392px;
+			text-align: center;
+			font-size: 61px;
+			line-height: 1.3;
+			opacity: 0;
+			transition: opacity 0.3s;
+		}
 
-	.entrance div {
-		font-size: 26px;
-		opacity: 0.6;
-		padding-top: 0.3em;
-	}
+		.is-entranceVisible .entrance {
+			opacity: 1;
+		}
 
-	.entrance span {
-		text-transform: uppercase;
-	}
+		.entrance div {
+			font-size: 26px;
+			opacity: 0.6;
+			padding-top: 0.3em;
+		}
 
-	.camera {
-		position: absolute;
-		top: 909px;
-		left: 472px;
-		right: 490px;
-		font-size: 29px;
-		text-align: center;
-		opacity: 0;
-		transition: opacity 2s;
-	}
+		.entrance span {
+			text-transform: uppercase;
+		}
 
-	.is-flashWarning .timer.is-active~.camera {
-		opacity: 1;
-	}
+		.camera {
+			position: absolute;
+			top: 909px;
+			left: 472px;
+			right: 490px;
+			font-size: 29px;
+			text-align: center;
+			opacity: 0;
+			transition: opacity 2s;
+		}
 
-	.timer,
-	.title,
-	.entrance,
-	.camera {
-		z-index: 1;
-	}
+		.is-flashWarning .timer.is-active ~ .camera {
+			opacity: 1;
+		}
 
-	.timer::before,
-	.title::before,
-	.involved-content::before,
-	.entrance::before {
-		content: '';
-		position: absolute;
-		z-index: -1;
-		top: -10px;
-		left: -10px;
-		right: -10px;
-		bottom: -10px;
-		background-color: rgba(0, 0, 0, 0.5);
-	}
+		.timer,
+		.title,
+		.entrance,
+		.camera {
+			z-index: 1;
+		}
 
-	.involved-content::before {
-		top: -5px;
-		bottom: -5px;
-	}
+		.timer::before,
+		.title::before,
+		.involved-content::before,
+		.entrance::before {
+			content: '';
+			position: absolute;
+			z-index: -1;
+			top: -10px;
+			left: -10px;
+			right: -10px;
+			bottom: -10px;
+			background-color: rgba(0, 0, 0, 0.5);
+		}
 
-	.entrance::before {
-		top: -2px;
-	}
+		.involved-content::before {
+			top: -5px;
+			bottom: -5px;
+		}
 
-	/* Hide not used components */
-	.title,
-	.involved {
-		display: none;
-	}
-</style>
+		.entrance::before {
+			top: -2px;
+		}
 
-<body>
-	<div class="playground">
-		<div class="js-timer timer"></div>
-		<div class="js-flowers flowers"></div>
-		<div class="js-reflectors reflectors"></div>
-		<div class="title">
-			Královedvorská odysea
-		</div>
-		<div class="involved">
-			<div class="involved-in">
-				<div class="involved-content">
-					Scénář, režie, choreografie, obrazy, multimediální vizualizace:
-					ZDEŇKA ČECHOVÁ - Hudba: MIROSLAV VOBOŘIL - Počítačové efekty,
-					animace, střih v technické spolupráci se studenty FIT ČVUT v Praze:
-					LUCIA ČAHOJOVÁ, TIMEA ČITBAJOVÁ, DANIEL HONYS, DANIEL JANOTA, JAKUB
-					LUŇÁČEK, ADAM MAKARA, TOMÁŠ MAREK, ONDŘEJ MÄRZ, KAROLÍNA RITZKOVÁ -
-					Technická podpora a kompletace: FILIP CHALUPA, LUKÁŠ CHALUPA -
-					Projekce a ozvučení: JAROMÍR LANDSMAN - Produkce: ZDEŇKA ČECHOVÁ.
+		/* Hide not used components */
+		.title,
+		.involved {
+			display: none;
+		}
+	</style>
+
+	<body>
+		<div class="playground">
+			<div class="js-timer timer"></div>
+			<div class="js-flowers flowers"></div>
+			<div class="js-reflectors reflectors"></div>
+			<div class="title">
+				Královedvorská odysea
+			</div>
+			<div class="involved">
+				<div class="involved-in">
+					<div class="involved-content">
+						Scénář, režie, choreografie, obrazy, multimediální vizualizace:
+						ZDEŇKA ČECHOVÁ - Hudba: MIROSLAV VOBOŘIL - Počítačové efekty,
+						animace, střih v technické spolupráci se studenty FIT ČVUT v Praze:
+						LUCIA ČAHOJOVÁ, TIMEA ČITBAJOVÁ, DANIEL HONYS, DANIEL JANOTA, JAKUB
+						LUŇÁČEK, ADAM MAKARA, TOMÁŠ MAREK, ONDŘEJ MÄRZ, KAROLÍNA RITZKOVÁ -
+						Technická podpora a kompletace: FILIP CHALUPA, LUKÁŠ CHALUPA -
+						Projekce a ozvučení: JAROMÍR LANDSMAN - Produkce: ZDEŇKA ČECHOVÁ.
+					</div>
 				</div>
 			</div>
+			<div class="entrance">
+				<div>zapojte se teď na</div>
+				<span>zasvit</span><span>.cz</span>
+			</div>
+			<div class="camera">
+				Foto bez blesku
+				<br />
+				No flash
+			</div>
 		</div>
-		<div class="entrance">
-			<div>zapojte se teď na</div>
-			<span>zasvit</span><span>.cz</span>
-		</div>
-		<div class="camera">
-			Foto bez blesku
-			<br />
-			No flash
-		</div>
-	</div>
-	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-52555251-9"></script>
-	<script>
-		window.dataLayer = window.dataLayer || []
-		function gtag() {
-			dataLayer.push(arguments)
-		}
-		gtag('js', new Date())
-		gtag('config', 'UA-52555251-9')
-	</script>
-</body>
-
+		<script
+			async
+			src="https://www.googletagmanager.com/gtag/js?id=UA-52555251-9"
+		></script>
+		<script>
+			window.dataLayer = window.dataLayer || []
+			function gtag() {
+				dataLayer.push(arguments)
+			}
+			gtag('js', new Date())
+			gtag('config', 'UA-52555251-9')
+		</script>
+	</body>
 </html>
